--- a/src/app/components/user/user-login/user-login.component.html
+++ b/src/app/components/user/user-login/user-login.component.html
@@ -1,32 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Slide Navbar</title>
-	<link rel="stylesheet" type="text/css" href="slide navbar style.css">
-<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
-</head>
-<body>
-	<div class="main">  	
-		<input type="checkbox" id="chk" aria-hidden="true">
+<div class="topContainer">
+  <div class="main">
+    <input type="checkbox" id="chk" aria-hidden="true" />
 
-			<div class="signup">
-				<form>
-					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="txt" placeholder="User name" required="">
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Sign up</button>
-				</form>
-			</div>
+    <div class="signup">
+      <form>
+        <label for="chk" aria-hidden="true">Sign up</label>
+<!-- bind the sign up form with the ngformModule of signup objects -->
+        <input type="text" name="txt" placeholder="User name" required="" [(ngModel)]="signupObj.username" />
+        <input type="email" name="email" placeholder="Email" required="" [(ngModel)]="signupObj.email" />
+        <input type="password" name="pswd" placeholder="Password" required="" [(ngModel)]="signupObj.password"/>
+        <button (click)="onSignUp()">Sign up</button>
+      </form>
+    </div>
 
-			<div class="login">
-				<form>
-					<label for="chk" aria-hidden="true">Login</label>
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Login</button>
-				</form>
-			</div>
-	</div>
-</body>
-</html>
+    <div class="login">
+      <form>
+        <!-- bind the login  form with the ngformModule of login objects -->
+        <label for="chk" aria-hidden="true">Login</label>
+        <input type="email" name="email" placeholder="Email" required="" />
+        <input type="password" name="pswd" placeholder="Password" required="" />
+        <button (click)="OnLogin()">Login</button>
+      </form>
+    </div>
+  </div>
+</div>
