--- a/src/app/components/user/user-login/user-login.component.html
+++ b/src/app/components/user/user-login/user-login.component.html
@@ -18,8 +18,8 @@
       <form>
         <!-- bind the login  form with the ngformModule of login objects -->
         <label for="chk" aria-hidden="true">Login</label>
-        <input type="email" name="email" placeholder="Email" required="" />
-        <input type="password" name="pswd" placeholder="Password" required="" />
+        <input type="text" name="username" placeholder="user name" required="" [(ngModel)]="loginObj.username" />
+        <input type="password" name="password" placeholder="Password" required="" [(ngModel)]="loginObj.password" />
         <button (click)="OnLogin()">Login</button>
       </form>
     </div>
